--- a/login.html
+++ b/login.html
@@ -1,21 +1,21 @@
-<div class="container" ng-controller="inventoryCtrl">
+<div class="container" ng-controller="loginController">
 
   <form>
     <br>
-    <br>
+    <br><span id="loginError"></span>
     <br>
     <div class="form-group">
       <label for="email">Email address:</label>
-      <input ng-model="test.email" type="email" class="form-control" id="email">
+      <input ng-model="uName" type="email" class="form-control" id="email">
     </div>
     <div class="form-group">
       <label for="pwd">Password:</label>
-      <input ng-model="test.pass" type="password" class="form-control" id="pwd">
+      <input ng-model="uPass" type="password" class="form-control" id="pwd">
     </div>
     <div class="checkbox">
       <label><input type="checkbox"> Remember me</label>
     </div>
-    <button ng-click="testPost('/#/test', test)" class="btn btn-default">Submit</button>
+    <button ng-click="login()" class="btn btn-default">Submit</button>
   </form>
 
 </div>
