started changing the db refs and such - reorienting to AL firebase

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div  class="modal fade bs-example-modal-lg" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
       <div class="modal-dialog modal-sm" role="document">
         <div ng-controller="loginController" class="modal-content">
-          
+
           <div class="input-group">
             <label>Email/Username</label>
           <input ng-model="uuName" class="form-control" id="uName" type="text"/>
@@ -97,14 +97,16 @@
   </body>
 
 <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
 <script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyBCG-3BIKqD7iq-9CT7JvufKePQ7FrG02c",
-    authDomain: "inventoryapp-2f0b5.firebaseapp.com",
-    databaseURL: "https://inventoryapp-2f0b5.firebaseio.com",
-    storageBucket: "inventoryapp-2f0b5.appspot.com",
-    messagingSenderId: "64328263763"
+    apiKey: "AIzaSyBVBYoHrPsATe1vcqzlKX3KPZ0g-LHdbog",
+    authDomain: "inventoryapp-bc585.firebaseapp.com",
+    databaseURL: "https://inventoryapp-bc585.firebaseio.com",
+    storageBucket: "inventoryapp-bc585.appspot.com",
+    messagingSenderId: "632902938011"
   };
   firebase.initializeApp(config);
 </script>
