--- a/admin.html
+++ b/admin.html
@@ -77,7 +77,7 @@
         <article ng-repeat="user in dbUsers | searchForUser:searchUser">
           <i class="fa fa-pencil" aria-hidden="true" ng-click="editUser()" style="font-size: 2em;"></i>
           <h2>{{user.fname}} {{user.lname}}</h2>
-          <h3>ID: {{user.id}}</h3>
+          <!--<h3>ID: {{user.id}}</h3>-->
         </article>
       </main>
 
