--- a/login.html
+++ b/login.html
@@ -1,21 +1,29 @@
 <div class="container" ng-controller="loginController">
 
-  <form>
-    <br>
-    <br><span id="loginError"></span>
-    <br>
-    <div class="form-group">
-      <label for="email">Email address:</label>
-      <input ng-model="uName" type="email" class="form-control" id="email">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input ng-model="uPass" type="password" class="form-control" id="pwd">
-    </div>
-    <div class="checkbox">
-      <label><input type="checkbox"> Remember me</label>
-    </div>
-    <button ng-click="login()" class="btn btn-default">Submit</button>
-  </form>
+
+  <section id='loginSection'>
+    <nav>
+
+    </nav>
+
+    <form>
+      <br>
+      <br><span id="loginError"></span>
+      <br>
+      <div class="form-group">
+        <label for="email">Email address:</label>
+        <input ng-model="uName" type="email" class="form-control" id="email">
+      </div>
+      <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input ng-model="uPass" type="password" class="form-control" id="pwd">
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox"> Remember me</label>
+      </div>
+      <button ng-click="login()" class="btn btn-default">Submit</button>
+    </form>
+  </section>
+
 
 </div>
