changes to align with use of firebase object for db operations

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <!-- Bootstrap -->
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- <link href="bower_components/bootstrap-select/dist/css/bootstrap-select.min.css"> -->
     <script src="bower_components/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
