Added return functionality

--- a/lookup.html
+++ b/lookup.html
@@ -71,11 +71,11 @@
         <!-- Return Form -->
         <form id="returnForm">
 
-          <span>This item is checkout by:</span> <input type="input" ng-model="checkedUser" readonly>
+          <span>This item is checkout by:</span> <input type="input" class="currentUser" ng-model="checkedUser" readonly>
 
           <aside class="userSelect">
             <i class="fa fa-user fa-2x" aria-hidden="true"></i>
-            <input type="input" ng-model="checkedUser" readonly>
+            <input type="input" class="currentUser" ng-model="checkedUser" readonly>
           </aside>
 
           <aside class="userPin">
